--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.359.0",
     "next": "14.1.3",
+    "next-sanity": "^8.4.6",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
